[ADD] tic tac toe mark

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <body>
     <table>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="t1-1"></td>
+        <td class="t1-2"></td>
+        <td class="t1-3"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="t2-1"></td>
+        <td class="t2-2"></td>
+        <td class="t2-3"></td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="t3-1"></td>
+        <td class="t3-2"></td>
+        <td class="t3-3"></td>
       </tr>
     </table>
   </body>
-  <script src="ticTacToe"></script>
+  <script src="./ticTacToe.js"></script>
 </html>
